--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,8 @@ http:
   port: 8081
 
 hooks:
-  - requirements:
+  - name: "Example"
+    requirements:
       eventType: "git.push"
       resourceContainers:
         project:
@@ -17,4 +18,4 @@ log:
     errors: true
     warnings: true
     info: true
-    debug: true
+    debug: false
